--- a/frontend/source/pug/ajax/topics-b.pug
+++ b/frontend/source/pug/ajax/topics-b.pug
@@ -1,4 +1,4 @@
-ul.items
+ol.items
     each val in ["baccident", "bact up", "bactivism", "BIDSaids", "BAl Jazeera", "bamsterdam", "bnarchist", "bookfair 2010", "abonymous", "barchiveart", "b of campaigning", "bausterity", "Bustria", "bvantgarde", "bavatar"]
         li
             a( href=val ) #{val}
