path to topics (keywords) api

--- a/frontend/source/less/layout/overlay.less
+++ b/frontend/source/less/layout/overlay.less
@@ -148,6 +148,7 @@
 
                 a {
                     text-decoration: none;
+                    white-space: nowrap;
                     &:hover {
                         border-bottom: 0.2rem solid white;
                     }
