--- a/frontend/source/pug/layout/page.pug
+++ b/frontend/source/pug/layout/page.pug
@@ -22,6 +22,7 @@ html( lang="en" )
         link( rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16" )
 
         meta( name="viewport" content="width=device-width,initial-scale=1.0" )
+        meta( name="context-root" content="" )
 
         link( href=config.paths.assets.css+"/styles.css" rel="stylesheet" type="text/css" )
 
