design changes for person, topics in overlay

--- a/frontend/source/pug/person.pug
+++ b/frontend/source/pug/person.pug
@@ -12,17 +12,19 @@ append main
             .col-md-2
             .col-md-8
                 
-                .__person
-                    .content-info.__person
-                        .row
-                            .col-md-2.start-xs
-                                .content-type Person
-                            .col-md-10
-                                .content-info__image
-                                    img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" width="240" )
-                                h1.content-info__title Eric Cattenberg
+                .content-info.__person
+                    .row
+                        .col-md-2.start-xs
+                            .content-type Person
+                        .col-md-10
+                            .content-info__image
+                                img( src='styles/images/portrait-eric.png' alt="Eric Cattenberg" width="240" )
+                            h1.content-info__title Eric Cattenberg
 
-                        p.content-info__text Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+                    p.content-info__text Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
+
+
+                p.person-intro Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta #[a(href="#") nobis est eligendi] optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
 
         .row
             .col-md-2
