--- a/frontend/source/less/modules/content-info.less
+++ b/frontend/source/less/modules/content-info.less
@@ -1,106 +1,119 @@
-    .content-info {
-        display: flex;
-        flex-direction: row;
+.content-info {
+    display: flex;
+    flex-direction: row;
 
-        padding: 1rem;
-        background-color: @color-grey;
-        margin-bottom: 4rem;
+    padding: 1rem;
+    background-color: @color-grey;
+    margin-bottom: 4rem;
 
-        font-family: @font-tertiary;
-        letter-spacing: .1rem;
-        .font(small);
+    font-family: @font-tertiary;
+    letter-spacing: .1rem;
+    .font(small);
+
+    @media @screen-sm-max {
+        //flex-direction: column;
+        .font(extra-small);
+    }
+
+    &.__person {
+        flex-direction: column;
+        margin-top: 6rem;
+        padding: 2rem;
+        border-bottom: .2rem solid @color-grey--60;
+
+        .content-type {
+            margin-top: 0;
+        }
+
+        .content-info__image {            
+            width: 6rem;
+            float: right;
+            img {
+                width: 5rem;
+                height: 5rem;
+            }
+        }
+        p.content-info__text {
+            .font(small);
+            display: block;
+            margin-top: 1rem;
+            font-family: @font;
+        }
+    }
+
+    .content-info__title {
+        .font(title-small);
+        color: @color-grey--50;
+        font-weight: normal;            
+    }
+
+    .content-info__image {
+        flex-shrink: 0;
+        
+        width: 11rem;
+        img {
+            width: 8rem;
+            height: 8rem;
+            margin: 0 2rem 0 1rem;
+            border-radius: 50%;
+        }
 
         @media @screen-sm-max {
-            //flex-direction: column;
-            .font(extra-small);
-        }
-
-        &.__person {
-            flex-direction: column;
-            margin-top: 6rem;
-            padding: 2rem;
-            border-bottom: .2rem solid @color-grey--60;
-
-            .content-type {
-                margin-top: 0;
-            }
-
-            .content-info__image {            
-                width: 6rem;
-                float: right;
-                img {
-                    width: 5rem;
-                    height: 5rem;
-                }
-            }
-            p.content-info__text {
-                .font(small);
-                display: block;
-                margin-top: 1rem;
-                font-family: @font;
-            }
-        }
-
-        .content-info__title {
-            .font(title-small);
-            color: @color-grey--50;
-            font-weight: normal;            
-        }
-
-        .content-info__image {
-            flex-shrink: 0;
-            
-            width: 11rem;
+            width: 6rem;
+            margin-bottom: 1rem;
             img {
-                width: 8rem;
-                height: 8rem;
-                margin: 0 2rem 0 1rem;
-                border-radius: 50%;
-            }
-
-            @media @screen-sm-max {
-                width: 6rem;
-                margin-bottom: 1rem;
-                img {
-                    width: 5rem;
-                    height: 5rem;
-                    margin-left: 0;
-                }
-            }
-        }
-        .content-info__text {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            padding: 0 2rem 0 0;
-
-            .author {
-                text-transform: uppercase;
-                color: @color-grey--50;
-                a {
-                   color: @color-grey--50; 
-                }
-            }
-            .date {
-                color: @color-grey--30;
-            }
-            .tags a { 
-                color: @color-grey--30;
-                text-transform: uppercase;
-            }
-
-        }
-
-        .content-info__related {
-            border-left: 0.1rem solid @color-grey--20;
-            padding-left: 2rem;
-            @media @screen-sm-max {
-                padding-left: 1rem;
-            }
-            li {
-                white-space: nowrap;
-                line-height: 2rem;
+                width: 5rem;
+                height: 5rem;
+                margin-left: 0;
             }
         }
     }
+    .content-info__text {
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        padding: 0 2rem 0 0;
+
+        .author {
+            text-transform: uppercase;
+            color: @color-grey--50;
+            a {
+               color: @color-grey--50; 
+            }
+        }
+        .date {
+            color: @color-grey--30;
+        }
+        .tags a { 
+            color: @color-grey--30;
+            text-transform: uppercase;
+        }
+
+    }
+
+    .content-info__related {
+        border-left: 0.1rem solid @color-grey--20;
+        padding-left: 2rem;
+        @media @screen-sm-max {
+            padding-left: 1rem;
+        }
+        li {
+            white-space: nowrap;
+            line-height: 2rem;
+        }
+    }
+}
+
+// @TODO: this does not belong here 
+p.person-intro {
+    .font(large);
+    color: @color-grey--30;
+    font-style: oblique;
+    margin: 0 0 4rem 10rem;
+
+    @media @screen-sm-max {
+        .font(medium);
+        margin-left: 3rem;
+    }    
+}
