base font-size exactly 21px and line-height 33px

--- a/frontend/source/less/core/variables.less
+++ b/frontend/source/less/core/variables.less
@@ -30,7 +30,7 @@
 
 // Font sizes
 
-@line-height--addition:             .9rem;
+@line-height--addition:             1.2rem;
 
 .font(@size) {
     & when (@size = extra-small) {
@@ -46,8 +46,8 @@
         line-height: 1.8rem + @line-height--addition;
     }
     & when (@size = base) {
-        font-size: 2rem;
-        line-height: 2rem + @line-height--addition;
+        font-size: 2.1rem;
+        line-height: 2.1rem + @line-height--addition;
     }
     & when (@size = large) {
         font-size: 2.4rem;
