fixing remarks, renamed .content to .listitem to have .article to be renamed .content ;-), better bem

--- a/frontend/source/less/layout/footer.less
+++ b/frontend/source/less/layout/footer.less
@@ -27,18 +27,19 @@
 		.footer__link {
 			font-family: @font-tertiary;
 			color: @color-grey--20;
+			letter-spacing: .1rem;
 			text-decoration: none;
-			//font-weight: 200;
 
 			&:hover {
-				text-decoration: underline;
+				color: @color-primary;
 			}
 
 		}
 
 		strong {
 			.font(small);
-			color: black;
+			color: @color-grey--50;
+			letter-spacing: .2rem;
 		}
 
 	}
