--- a/frontend/source/pug/article.pug
+++ b/frontend/source/pug/article.pug
@@ -15,7 +15,7 @@ append main
                 .article
                     header
                         .content-type Article
-                        h1.title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
+                        h1.article-title NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
                     
                         .content-info
                             .content-info__image
@@ -51,12 +51,12 @@ append main
             .col-md-2
 
         .row
-            .col-md-3
-                a.article-image( href="#images" )
-                    img( src="styles/images/Share_the_Security.jpg" )
-            .col-md-7
+            .col-md-2
+                //- a.article-image( href="#images" )
+                //-     img( src="styles/images/Share_the_Security.jpg" )
+            .col-md-8
 
-                    p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
+                    p.article-intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
 
             .col-md-2
         .row
