--- a/frontend/source/pug/collection.pug
+++ b/frontend/source/pug/collection.pug
@@ -24,7 +24,7 @@ append main
         .row
             .col-md-2
             .col-md-8
-                article.content
+                article.listitem
                     .content-type Article
                     h2.title 
                         a( href="article.html" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
@@ -48,11 +48,11 @@ append main
         .row
             .col-md-2
             .col-md-8
-                article.content.__video
+                article.listitem.__video
                     .content-type Video
                     h2.title 
                         a( href="video.html" ) Lol cats in the kitchen
-                    .content__video-still
+                    .listitem-video-still
                         a( href="video.html" )
                             img( src='styles/images/Share_the_Security.jpg' width="640" )
                         a.read-more.__play( href="video.html" ) Play
