--- a/frontend/source/pug/layout/header.pug
+++ b/frontend/source/pug/layout/header.pug
@@ -1,5 +1,5 @@
 .header
         h1
-            a.header__logo( href="/" )
+            a.header-logo( href="/" )
                 img( src="styles/images/logo-tmf.svg" alt="Tactical Media Files" width="320" )
-        h2.header_motto The 'living archive' for Tactical Media's present, past and future.
+        h2.header-motto The 'living archive' for Tactical Media's present, past and future.
