--- a/frontend/source/pug/list.pug
+++ b/frontend/source/pug/list.pug
@@ -12,11 +12,11 @@ append main
         .row
             .col-md-2
             .col-md-8
-                article.content
+                article.listitem
                     .content-type Article
-                    h2.title 
+                    h2.listitem-title 
                         a( href="article.html" ) NRA and Smith &amp; Wesson Partner to "Share the Safety" With All Americans
-                    p.intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
+                    p.listitem-intro Simi Valley, Ca. - The NRA announced today, at the Ronald Reagan Presidential Library, a new program to get guns into the hands of statistically under-armed Americans—from homosexuals to the elderly to besieged urban communities—and make self-defense, rather than gun control, the protection of choice for all Americans.
                     a.read-more( href="article.html" ) Read
                     +tags({
                             tag: 'Activism',
@@ -36,11 +36,11 @@ append main
         .row
             .col-md-2
             .col-md-8
-                article.content
+                article.listitem
                     .content-type Article
-                    h2.title 
+                    h2.listitem-title 
                         a( href="article.html" ) Nuit Debout
-                    p.intro Nuit Debout is a French social movement that began on March 31, 2016, arising out of protests against proposed neoliberal labor reforms known as the "Loi Travail," or the "El Khomri Law". The movement is centred at Paris's Place de la République, where protestors have held nightly assemblies following the
+                    p.listitem-intro Nuit Debout is a French social movement that began on March 31, 2016, arising out of protests against proposed neoliberal labor reforms known as the "Loi Travail," or the "El Khomri Law". The movement is centred at Paris's Place de la République, where protestors have held nightly assemblies following the
                     a.read-more( href="article.html" ) Read
                     +tags({
                             tag: 'Campaign',
@@ -67,12 +67,12 @@ append main
         .row
             .col-md-2
             .col-md-8
-                article.content.__video
+                article.listitem.__video
                     .content-type Video
-                    h2.title 
+                    h2.listitem-title 
                         a( href="video.html" ) Lol cats in the kitchen
 
-                    .content__video-still
+                    .listitem-video-still
                         a( href="video.html" )
                             img( src='styles/images/lol-cat.png' )
                         a.read-more.__play( href="video.html" ) View
