--- a/frontend/source/less/layout/header.less
+++ b/frontend/source/less/layout/header.less
@@ -19,7 +19,7 @@
         width: 6.7rem;
     }
 
-    .header__logo {
+    .header-logo {
         img {
             width: 10rem;
         }
@@ -27,22 +27,25 @@
 
     .home & {
         width: 100%;
-        height: 12rem;
+        height: 18rem;
         padding: 1rem 2rem 1rem 1rem;
 
-        .header__logo {
+        @media @screen-md-max {
+            height: 12rem;
+        }
+        .header-logo {
             img {
-                width: 16rem;
+                width: 20rem;
+                @media @screen-md-max {
+                    width: 12rem;
+                }
+
             }
         }
     }	
 	
-	.header_motto {
+	.header-motto {
 		display: none;
-
-        .home & {
-            display: block;
-        }
 
         .font(extra-small);
 		text-align: right;
