renamed .article to .content etc.

--- a/frontend/source/less/components/heading.less
+++ b/frontend/source/less/components/heading.less
@@ -12,7 +12,7 @@
         }
     }
 
-    .collection__heading {
+    .collection-heading {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -34,7 +34,7 @@
     h1 {
         .font(small);
 
-        &.collection__content-type {
+        &.collection-content-type {
             font-family: @font-secondary;
             letter-spacing: .1rem;
             text-transform: lowercase;
@@ -48,7 +48,7 @@
         }
     }
 
-    h2.collection__author {
+    h2.collection-author {
         .font(medium);
         font-family: @font-secondary;
         letter-spacing: .1rem;
@@ -56,7 +56,7 @@
         text-align: center;
     }
 
-    h3.collection__title {
+    h3.collection-title {
         .font(title-normal);
         font-weight: normal;
         text-align: center;
@@ -67,7 +67,7 @@
         }
     }
 
-    p.collection__intro {
+    p.collection-intro {
         .font(large);
         color: white;
         font-style: oblique;
