--- a/frontend/source/less/modules/content.less
+++ b/frontend/source/less/modules/content.less
@@ -1,6 +1,6 @@
-.article {
+.content {
     
-    .article-title {
+    .content-title {
         .font(title-normal);
         color: @color-grey--50;
         font-weight: normal;
@@ -11,14 +11,14 @@
         }
     }
     
-    .article-image {
+    .content-image {
         img {
             width: 100%;
             margin: 1rem 0 3rem 0;
         }
     }
 
-    p.article-intro {
+    p.content-intro {
         .font(large);
         color: @color-grey--30;
         font-style: oblique;
