--- a/frontend/source/less/modules/video.less
+++ b/frontend/source/less/modules/video.less
@@ -137,7 +137,7 @@
 
     }
 
-    .title {
+    .video-title {
         .font(title-normal);
         color: @color-grey--50;
         font-weight: normal;
@@ -152,7 +152,7 @@
         text-align: left;
     }
 
-    p.intro {
+    p.video-intro {
         .font(large);
         margin: 0 0 4rem  0;
         color: @color-grey--30;
