--- a/frontend/source/less/styles.less
+++ b/frontend/source/less/styles.less
@@ -34,9 +34,9 @@
 
 // Modules
 // -------------------------------
-@import "modules/article";
 @import "modules/carousel";
 @import "modules/content";
 @import "modules/content-info";
 @import "modules/content-related";
+@import "modules/listitem";
 @import "modules/video";
